<resources>
    <string name="app_name">AchievePlay</string>

    <string name="default_web_client_id" translatable="false">833565627547-s5ftf02h1fputh4k4fkpc104cqqp732b.apps.googleusercontent.com</string>
    <string name="genre_prompt">Género</string>
    <string name="platform_prompt">Plataforma</string>
    <string name="date_prompt">Fecha de lanzamiento</string>
    <string name="search_hint">Buscar videojuegos...</string>
    <string name="fetch_games">Buscar videojuegos</string>
    <string name="change_activity">Cambiar de actividad</string>
    <string name="logout">Cerrar sesión</string>
    <string name="profile_image_desc">Foto de perfil</string>
    <string name="game_image">Imagen del juego</string>
    <string name="userManual">Manual de usuario</string>
    <string-array name="genre_options">
        <item>Todos</item>
        <item>RPG</item>
        <item>Action</item>
        <item>Sandbox</item>
    </string-array>
    <string-array name="platform_options">
        <item>Todas</item>
        <item>PC</item>
        <item>PS4</item>
        <item>Xbox One</item>
    </string-array>
    <string-array name="date_options">
        <item>Todas</item>
        <item>2011</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2020</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetch_users">BUSCAR USUARIOS</string>
    <string name="searchUsers_hint">Buscar usuarios...</string>

</resources>